--- a/index.ipynb
+++ b/index.ipynb
@@ -52,15 +52,69 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import numpy as np\n",
-    "\n",
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "# Complete this function! \n",
-    "def distance():\n",
-    "    pass\n",
+    "def distance(a, b, r = 2, verbose = True):\n",
+    "    dist = 0\n",
+    "    if len(a) == len(b): #check that arrays have same number of values\n",
+    "        for i in range(len(a)):\n",
+    "            dist += np.power(abs((a[i] - b[i])), r)\n",
+    "    distance = np.power(dist, 1 / r)\n",
+    "    if verbose:\n",
+    "        print(distance)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "-2"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.power(-2, 1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.0\n",
+      "None\n",
+      "7.0\n",
+      "None\n",
+      "4.497941445275415\n",
+      "None\n"
+     ]
+    }
+   ],
+   "source": [
     "\n",
     "test_point_1 = (1, 2)\n",
     "test_point_2 = (4, 6)\n",
@@ -88,11 +142,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 23,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "17.939899665271266\n"
+     ]
+    }
+   ],
    "source": [
-    "   # Expected Output: 17.939899665271266"
+    "point1 = (-2, -3.4, 4, 15, 7) \n",
+    "point2 = (3, -1.2, -2, -1, 7)\n",
+    "\n",
+    "distance(point1, point2, 2)\n",
+    "\n",
+    "\n",
+    "    # Expected Output: 17.939899665271266\n",
+    "    \n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -109,11 +180,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "20.0\n"
+     ]
+    }
+   ],
    "source": [
-    "   # Expected Output: 20"
+    "point1 = [0, 0, 0, 7, 16, 2, 0, 1, 2, 1]\n",
+    "point2 = [1, -1, 5, 7, 14, 3, -2, 3, 3, 6]\n",
+    "\n",
+    "distance(point1, point2, 1)\n",
+    "\n",
+    "# Expected Output: 20\n",
+    "    \n",
+    "    "
    ]
   },
   {
@@ -130,11 +216,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "5.268789659188307\n"
+     ]
+    }
+   ],
    "source": [
-    "   # Expected Output: 5.268789659188307"
+    "   # Expected Output: 5.268789659188307\n",
+    "point1 = (-2, 7, 3.4) \n",
+    "point2 = (3, 4, 1.5)\n",
+    "\n",
+    "distance(point1, point2, 3.5)\n",
+    "    "
    ]
   },
   {
@@ -149,9 +248,9 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "learn-env",
    "language": "python",
-   "name": "python3"
+   "name": "learn-env"
   },
   "language_info": {
    "codemirror_mode": {
@@ -163,7 +262,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.4"
+   "version": "3.6.6"
   }
  },
  "nbformat": 4,
